# SolidOak

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
resources/: SolidOak.desktop  soakrc
src/: builders.rs  editors.rs  ffi.rs  main.rs  native.rs  projects.rs  ui.rs  utils.rs
