[package]

name = "solidoak"
version = "0.1.3"
authors = ["oakes <zsoakes@gmail.com>"]
build = "build.rs"

[dependencies]

glib = "^0"
gdk = "^0"

[dependencies.gtk]

git = "https://github.com/oakes/gtk"
features = ["gtk_3_10"]

[dependencies.neovim-rs]

git = "https://github.com/oakes/neovim-rs"

[dependencies.rustc-serialize]

rustc-serialize = "0.3"
