[package]
name = "solidoak"
version = "0.1.3"
authors = ["oakes <zsoakes@gmail.com>"]
build = "build.rs"

[dependencies]
rustc-serialize = "0.3"
libc = "0.2"
glib = "^0"
gdk = "^0"

[dependencies.gtk]
git = "https://github.com/oakes/gtk"
#path = "../gtk"

[dependencies.neovim-rs]
git = "https://github.com/oakes/neovim-rs"
#path = "../neovim-rs"

[features]
gtk_3_10 = []
gtk_3_14 = ["gtk_3_10"]
